--- a/Conedu/Base.lproj/Main.storyboard
+++ b/Conedu/Base.lproj/Main.storyboard
@@ -174,6 +174,9 @@
                                         <buttonConfiguration key="configuration" style="filled" title="Primaria - grado 1" cornerStyle="fixed">
                                             <color key="baseForegroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         </buttonConfiguration>
+                                        <connections>
+                                            <action selector="gradoUnoBoton:" destination="4mP-nX-Qo8" eventType="touchUpInside" id="pec-XM-8We"/>
+                                        </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MOa-w2-jnq" userLabel="buttonPrimaria3">
                                         <rect key="frame" x="0.0" y="132" width="321" height="40"/>
@@ -263,13 +266,158 @@
             </objects>
             <point key="canvasLocation" x="2004" y="4"/>
         </scene>
+        <!--Menu Grado View Controller-->
+        <scene sceneID="97b-DL-GL3">
+            <objects>
+                <viewController storyboardIdentifier="MenuMateriasID" useStoryboardIdentifierAsRestorationIdentifier="YES" id="ndQ-E3-0xU" customClass="MenuGradoViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="GMk-q7-RgD">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" fixedFrame="YES" image="fondo" translatesAutoresizingMaskIntoConstraints="NO" id="OOq-TT-uR9" customClass="MenuGradiM">
+                                <rect key="frame" x="-49" y="-575" width="1080" height="1920"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="36" translatesAutoresizingMaskIntoConstraints="NO" id="3ZB-Qi-Bdz">
+                                <rect key="frame" x="36" y="141" width="321" height="562"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Inicio &gt; PRIMARIA &gt; GRADO l" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="l9c-PJ-TLQ">
+                                        <rect key="frame" x="0.0" y="0.0" width="321" height="20"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="20" id="CaF-oa-iVG"/>
+                                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="50" id="bdf-j7-UTT"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="23"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eOU-m4-OzP" userLabel="buttonPrimaria1">
+                                        <rect key="frame" x="0.0" y="56" width="321" height="40"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="40" id="y4B-qa-W81"/>
+                                        </constraints>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="filled" title="Español" cornerStyle="fixed">
+                                            <color key="baseForegroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </buttonConfiguration>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Lzu-OA-CgW" userLabel="buttonPrimaria3">
+                                        <rect key="frame" x="0.0" y="132" width="321" height="40"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="50" id="SCe-dq-SPv"/>
+                                        </constraints>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="filled">
+                                            <attributedString key="attributedTitle">
+                                                <fragment content="Matemáticas"/>
+                                            </attributedString>
+                                            <color key="baseForegroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </buttonConfiguration>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sWf-xh-Ai9" userLabel="buttonPrimaria2">
+                                        <rect key="frame" x="0.0" y="208" width="321" height="40"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="50" id="meX-Nr-Vpt"/>
+                                        </constraints>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="filled" title="Exploración de la Naturaleza y Sociedad">
+                                            <fontDescription key="titleFontDescription" name="Helvetica" family="Helvetica" pointSize="15"/>
+                                            <color key="baseForegroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <color key="baseBackgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </buttonConfiguration>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NgC-WA-Sqf" userLabel="buttonPrimaria5">
+                                        <rect key="frame" x="0.0" y="284" width="321" height="40"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="50" id="HXc-fP-EzA"/>
+                                        </constraints>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="filled" title="Formación Cívica y Ética">
+                                            <color key="baseForegroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </buttonConfiguration>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="827-yp-TAJ" userLabel="buttonPrimaria6">
+                                        <rect key="frame" x="0.0" y="360" width="321" height="40"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="50" id="0YY-3y-avA"/>
+                                        </constraints>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="filled" title="Educación Artística">
+                                            <color key="baseForegroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </buttonConfiguration>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GMs-yz-MXE" userLabel="buttonPrimaria4">
+                                        <rect key="frame" x="0.0" y="436" width="321" height="40"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="50" id="cvZ-KY-qtS"/>
+                                        </constraints>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="filled" title="Educación Física">
+                                            <color key="baseForegroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </buttonConfiguration>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="akV-C5-fQC" userLabel="buttonPrimaria4">
+                                        <rect key="frame" x="0.0" y="512" width="321" height="50"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="50" id="ynd-L9-1Gz"/>
+                                        </constraints>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="filled" title="Inglés">
+                                            <color key="baseForegroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </buttonConfiguration>
+                                    </button>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="sWf-xh-Ai9" firstAttribute="height" secondItem="eOU-m4-OzP" secondAttribute="height" id="5xc-y4-7um"/>
+                                    <constraint firstItem="NgC-WA-Sqf" firstAttribute="height" secondItem="eOU-m4-OzP" secondAttribute="height" id="CS7-2p-u86"/>
+                                    <constraint firstItem="GMs-yz-MXE" firstAttribute="height" secondItem="eOU-m4-OzP" secondAttribute="height" id="Ea6-5m-jPf"/>
+                                    <constraint firstItem="827-yp-TAJ" firstAttribute="height" secondItem="eOU-m4-OzP" secondAttribute="height" id="QHG-v3-FqS"/>
+                                    <constraint firstItem="Lzu-OA-CgW" firstAttribute="height" secondItem="eOU-m4-OzP" secondAttribute="height" id="Ydd-Nf-t3u"/>
+                                </constraints>
+                            </stackView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="sy9-59-5qf">
+                                <rect key="frame" x="28" y="42" width="175" height="117"/>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9pL-xM-k5j">
+                                <rect key="frame" x="30" y="751" width="91" height="35"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" image="arrowshape.turn.up.left.fill" catalog="system" title="Atrás">
+                                    <color key="baseForegroundColor" systemColor="labelColor"/>
+                                </buttonConfiguration>
+                                <connections>
+                                    <action selector="atrasBotonGrado:" destination="ndQ-E3-0xU" eventType="touchUpInside" id="19M-pV-UGr"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="TsS-p3-bZp"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="TsS-p3-bZp" firstAttribute="bottom" secondItem="sy9-59-5qf" secondAttribute="bottom" constant="659" id="CbP-FM-JoN"/>
+                            <constraint firstItem="3ZB-Qi-Bdz" firstAttribute="top" secondItem="TsS-p3-bZp" secondAttribute="top" constant="82" id="FLb-dG-nZX"/>
+                            <constraint firstItem="sy9-59-5qf" firstAttribute="top" secondItem="GMk-q7-RgD" secondAttribute="topMargin" constant="-17" id="Isa-cc-kE2"/>
+                            <constraint firstItem="3ZB-Qi-Bdz" firstAttribute="centerX" secondItem="GMk-q7-RgD" secondAttribute="centerX" id="s8I-X9-ObO"/>
+                            <constraint firstItem="3ZB-Qi-Bdz" firstAttribute="leading" secondItem="TsS-p3-bZp" secondAttribute="leading" constant="36" id="t7x-hE-4dd"/>
+                            <constraint firstItem="TsS-p3-bZp" firstAttribute="trailing" secondItem="sy9-59-5qf" secondAttribute="trailing" constant="190" id="tTZ-yi-CUZ"/>
+                            <constraint firstItem="sy9-59-5qf" firstAttribute="leading" secondItem="TsS-p3-bZp" secondAttribute="leading" constant="28" id="yEy-7f-Svb"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="KWi-l7-syZ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2824" y="4"/>
+        </scene>
     </scenes>
     <color key="tintColor" systemColor="systemGroupedBackgroundColor"/>
     <resources>
+        <image name="arrowshape.turn.up.left.fill" catalog="system" width="128" height="104"/>
         <image name="fondo" width="1080" height="1920"/>
         <image name="logo" width="666" height="374"/>
         <image name="person.circle" catalog="system" width="128" height="123"/>
         <image name="square.fill" catalog="system" width="128" height="114"/>
+        <systemColor name="labelColor">
+            <color red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
